# mndc

./: .gitignore  CMakeLists.txt  README.md  mainwindow.h  mndc.pro  preferences.h
src/: main.cpp  mainwindow.cpp  preferences.cpp
src/ui/: mainwindow.ui  preferences.ui
